# backend/public/api/openapi.yaml
@@ -79,6 +79,8 @@ paths:
   /logout:
     post:
       summary: Desloga o usuário em questão
+      security:
+        - bearer: []
       responses:
         200:
           description: Usuário deslogado com sucesso
@@ -98,6 +100,25 @@ paths:
         500:
           description: Erro interno no servidor
 
+  /id:
+    get:
+      summary: Retorna o ID do usuário logado
+      security:
+        - bearer: []
+      responses:
+        200:
+          description: Usuário encontrado
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  location:
+                    type: string
+                    description: o ID do Usuario logado
+        404:
+          description: Usuario não encontrado
+
   /usuarios/{id}:
     parameters:
       - name: id
@@ -107,6 +128,8 @@ paths:
           type: integer
     get: 
       summary: Acessa um usuario
+      security:
+        - bearer: []
       responses:
         200:
           description: Ok
@@ -118,6 +141,8 @@ paths:
           description: Usuário não encontrado
     put: 
       summary: Atualiza um usuario
+      security:
+        - bearer: []
       requestBody:
         required: true
         content:
@@ -141,6 +166,8 @@ paths:
           description: Documento não encontrado
     delete:
       summary: Apaga um usuário
+      security:
+        - bearer: []
       responses:
         200:
           description: Ok
@@ -150,6 +177,8 @@ paths:
   /usuarios/documentos:
     get:
       summary: Lista de documentos de um usuário
+      security:
+        - bearer: []
       responses:
         200:
           description: OK
@@ -165,6 +194,8 @@ paths:
           type: integer
     get:
       summary: Lista de documentos de um usuário
+      security:
+        - bearer: []
       responses:
         200:
           description: OK
@@ -180,6 +211,8 @@ paths:
           type: integer
     get: 
       summary: Acessa um documento
+      security:
+        - bearer: []
       responses:
         200:
           description: Ok
@@ -189,6 +222,8 @@ paths:
                 type: object
     post:
       summary: Cria um novo documento formatado
+      security:
+        - bearer: []
       requestBody:
         required: true
         content:
@@ -219,6 +254,8 @@ paths:
   /documentos:
     post:
       summary: Cria um novo documento
+      security:
+        - bearer: []
       requestBody:
         required: true
         content:
@@ -253,6 +290,8 @@ paths:
           type: integer
     put:
       summary: Altera um documento
+      security:
+        - bearer: []
       requestBody:
         required: true
         content:
@@ -271,8 +310,17 @@ paths:
     
     delete:
       summary: Apaga um documento
+      security:
+        - bearer: []
       responses:
         200:
           description: Ok
         404:
           description: Documento não encontrado
+
+components:
+  securitySchemes:
+    bearer: 
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
